--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "solid-ag-grid",
-  "version": "0.0.200",
+  "name": "@calhistorian/solid-ag-grid",
+  "version": "0.0.201",
   "description": "AG Grid SolidJS Component",
   "license": "MIT",
   "author": "Niall Crosby <niall.crosby@ag-grid.com>",
@@ -9,15 +9,20 @@
       "name": "David Di Biase",
       "email": "dave.dibiase@gmail.com",
       "url": "https://github.com/davedbase"
+    },
+    {
+      "name": "Calhistorian",
+      "email": "mark.robertson@publicpedagogy.org",
+      "url": "https://github.com/calhistorian"
     }
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/solidjs-community/solid-ag-grid"
+    "url": "https://github.com/calhistorian/solid-ag-grid"
   },
-  "homepage": "https://github.com/solidjs-community/solid-ag-grid",
+  "homepage": "https://github.com/calhistorian/solid-ag-grid",
   "bugs": {
-    "url": "https://github.com/solidjs-community/solid-ag-grid/issues"
+    "url": "https://github.com/calhistorian/solid-ag-grid/issues"
   },
   "type": "module",
   "files": [
